# coding-exercise-audio-transcription

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: .dockerignore  .env.template  Dockerfile  config.py  main.py  requirements-dev.txt  requirements.txt
app/data/: transcriptions.json
app/models/: transcription.py  upload.py
app/routers/: transcriptions.py
app/services/: file_service.py  transcription_service.py  url_service.py
app/storage/: data_storage.py  file_storage.py
docs/: Coding Exercise - Python.docx
tests/: conftest.py
tests/fixtures/: sample_audio_files.py
tests/integration/: test_transcription_endpoints.py
tests/unit/: __init__.py  test_data_storage.py  test_file_service.py  test_file_storage.py  test_interval_overlap.py  test_transcription_service.py  test_url_service.py
ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx  utils.ts
ui/src/components/common/: ErrorMessage.tsx  LoadingSpinner.tsx
ui/src/components/transcription/: TranscriptionList.tsx  TranscriptionSegmentItem.module.css  TranscriptionSegmentItem.tsx  index.ts
ui/src/hooks/: useTranscription.ts  useUpload.ts
ui/src/pages/: NotFoundPage.module.css  NotFoundPage.tsx  ResultsPage.module.css  ResultsPage.tsx  UploadPage.module.css  UploadPage.tsx
ui/src/services/api/: client.ts  transcription.ts
ui/src/types/: api.ts  transcription.ts  upload.ts
