[project]
name = "coding-exercise-audio-transcription"
version = "0.1.0"
description = "Audio to Text transcription"
authors = [
    {name = "Filip Górczyński",email = "filip.gorczynski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.2,<0.125.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
